# connect-labo

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  DEVELOP_REQUEST.md
.github/workflows/: ci-blog.yml  deploy-to-production.yml
blog/: package-lock.json
blog-src/: .prettierignore  astro.config.mjs  eslint.config.mjs  package-lock.json  package.json
blog-src/src/: content.config.ts
blog/src/: content.config.ts
dev-settings/: ARCHITECTURE.template.md  README.md
dev-settings/claude/: CLAUDE.md  README.md  human-like-writing-style-guide.md  review-request-template.md  settings.json  sync-to-global.sh
dev-settings/coding-agents/: AGENTS.md  CLAUDE.md  README.md  settings.json  sync-to-global.sh
dev-settings/github/: PULL_REQUEST_TEMPLATE.md
dev-settings/vscode/: settings.json
go/go-night-talks/: 1-rapid_identifier.md  12-design_pattern_by_go.md  14-stack_overflow.md  4-make_transactions_rapid.md  5-terraform_quarity.md  9-gorm_and_sqlx.md  (+3 more)
src/: content.config.ts
workspaces/python/rewrite-pr-duration/: .gitignore  .pre-commit-config.yaml  README.md  config.example.toml  pyproject.toml
workspaces/python/rewrite-pr-duration/src/rewrite_pr_duration/: __init__.py  calculator.py  config.py  main.py  pr_updater.py
workspaces/python/rewrite-pr-duration/tests/: __init__.py  test_calculator.py  test_config.py  test_pr_updater.py
workspaces/rust/dioxus-ssr-demo/: Cargo.toml  README.md
workspaces/rust/dioxus-ssr-demo/src/: main.rs
(+366 files in other folders)
