[project]
name = "rewrite-pr-duration"
version = "0.1.0"
description = "GitHub PRの作業時間を自動計算してbodyを更新するツール"
readme = "README.md"
authors = [
    { name = "connect0459", email = "connect0459@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
rewrite-pr-duration = "rewrite_pr_duration.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
